feat : koridor-kelas

--- a/templates/user/bootcamp/purchase.html
+++ b/templates/user/bootcamp/purchase.html
@@ -51,7 +51,7 @@
                         <div id="flush-{{p.id}}" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
                             <ol>
-                            {% for k in p.ketentuans %}
+                            {% for k in p.ketentuan %}
                             <li>{{k}}</li>
                             {% endfor %}
                             </ol>
